# yourgame

./: .gitignore  404.html  CMakeLists.txt  LICENSE.txt  README.md  index.html  init.cmd  sitemap.xml
.github/workflows/: deploy.yml  docs.yml
Api/: index.html
Changelog/: index.html
Development/: index.html
Manual/: index.html
assets/: main.lua  yg_LICENSES.txt
demo/: index.html  yourgame.js  yourgame.wasm
demo/assets/: LICENSE_3rdparty.txt  _LICENSE_3rdparty.txt  box.mtl  demo_physics.lua  demo_postproc.lua  demo_skylight.lua  demo_splash.json  demo_sprites.lua  demo_trafocamera.lua  fence.mtl  main.lua  sprites.json  sprites_main.json  trafficcone.mtl  yg_LICENSES.txt  yg_diffusecolor.frag  yg_diffusetex.frag
docs/: mkdocs.yml  requirements.txt
docs/md_sites/: Api.md  Changelog.md  Development.md  Manual.md  Placeholder.html  index.md  man_3dmodels_blender.md  man_3dmodels_blockbench.md  man_3dmodels_load.md  man_files.md  man_glsl.md  man_sky.md  man_sprites.md  yg_asset.md  yg_audio.md  yg_control.md  yg_gl.md  yg_input.md  yg_interact.md  yg_log.md  yg_math.md  yg_phys.md  yg_postproc.md  yg_time.md  yg_util.md
examples/assets/: main.lua
man_3dmodels_blender/: index.html
man_3dmodels_blockbench/: index.html
man_3dmodels_load/: index.html
man_files/: index.html
man_glsl/: index.html
man_sky/: index.html
man_sprites/: index.html
search/: search_index.json
src/: LuaBridge_glmQuat.h  LuaBridge_glmVec3.h  mygame.cpp  yg_interact.h  ygif_camera.cpp  ygif_camera.h  ygif_glue.cpp  ygif_glue.h  ygif_motion.cpp  ygif_motion.h  ygif_trafo.cpp  ygif_trafo.h
yg_asset/: index.html
yg_audio/: index.html
yg_control/: index.html
yg_gl/: index.html
yg_input/: index.html
yg_interact/: index.html
yg_log/: index.html
yg_math/: index.html
yg_phys/: index.html
yg_postproc/: index.html
yg_time/: index.html
yg_util/: index.html
